force-app/main/default/objects/PMC_SS_IncentiveEarned__c/PMC_SS_IncentiveEarned__c.object-meta.xml
<CustomObject>
    <description>This Object will be used to update Accrual data from SAP via integration when Accrual is generated in SAP.</description>
    <label>Incentive Earned</label>
    <nameField>
        <displayFormat>IE-{0000}</displayFormat>
        <label>Incentive Earned Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Incentives Earned</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>