force-app/main/default/objects/PMC_SS_IncentiveEarned__c/fields/PMC_SS_AccrualsCurrency__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_AccrualsCurrency__c</fullName>
    <description>Accrual currency (eg USD)</description>
    <label>Accruals Currency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>