force-app/main/default/objects/PMC_SS_IncentiveEarned__c/fields/PMC_SS_AccrualsOpen__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_AccrualsOpen__c</fullName>
    <description>Amount of Open Accruals  ( not posted)</description>
    <label>Accruals Open</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>