force-app/main/default/objects/PMC_SS_IncentiveEarned__c/fields/PMC_SS_AccrualsReversed__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_AccrualsReversed__c</fullName>
    <description>Amount of Accruals Reversed</description>
    <label>Accruals Reversed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>