force-app/main/default/objects/PMC_SS_IncentiveEarned__c/fields/PMC_SS_AccrualsTotal__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_AccrualsTotal__c</fullName>
    <description>Total Amount of Accruals</description>
    <label>Accruals Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>