force-app/main/default/objects/PMC_SS_IncentiveEarned__c/fields/PMC_SS_ConditionContractType__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_ConditionContractType__c</fullName>
    <description>Classification used to differentiate between different types of condition contracts Eg - Individual Rebate, Growth Rebate etc</description>
    <label>Condition Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ZR01</fullName>
                <label>Individual Rebate</label>
            </value>
            <value>
                <fullName>ZR02</fullName>
                <label>Portfolio Rebate</label>
            </value>
            <value>
                <fullName>ZR03</fullName>
                <label>Growth Rebate</label>
            </value>
            <value>
                <fullName>ZR05</fullName>
                <label>Blended Rebate</label>
            </value>
            <value>
                <fullName>ZR04</fullName>
                <isActive>false</isActive>
                <label>Ex Space Rebate</label>
            </value>
            <value>
                <fullName>ZC02</fullName>
                <isActive>false</isActive>
                <label>Fixed Commission</label>
            </value>
            <value>
                <fullName>Individual Accrual</fullName>
                <isActive>false</isActive>
                <label>Individual Accrual</label>
            </value>
            <value>
                <fullName>ZC01</fullName>
                <isActive>false</isActive>
                <label>Volume Commission</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>