force-app/main/default/objects/PMC_SS_IncentiveEarned__c/fields/PMC_SS_ConditionType__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_ConditionType__c</fullName>
    <description>The Key that unquely identifies the accrual condition</description>
    <label>Condition Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ZRA1</fullName>
                <label>Individual Accrual</label>
            </value>
            <value>
                <fullName>ZRS1</fullName>
                <label>Individual Rebate</label>
            </value>
            <value>
                <fullName>ZRA2</fullName>
                <label>Portfolio Accrual</label>
            </value>
            <value>
                <fullName>ZRS2</fullName>
                <label>Portfolio Rebate</label>
            </value>
            <value>
                <fullName>ZRA3</fullName>
                <label>Growth Accrual</label>
            </value>
            <value>
                <fullName>ZRS3</fullName>
                <label>Growth Rebate</label>
            </value>
            <value>
                <fullName>ZRA6</fullName>
                <label>Blended Accrual</label>
            </value>
            <value>
                <fullName>ZRS6</fullName>
                <label>Blended Rebate</label>
            </value>
            <value>
                <fullName>ZCA1</fullName>
                <isActive>false</isActive>
                <label>Commission Accrual</label>
            </value>
            <value>
                <fullName>ZCS1</fullName>
                <isActive>false</isActive>
                <label>Commission Rebate</label>
            </value>
            <value>
                <fullName>ZRA4</fullName>
                <isActive>false</isActive>
                <label>Ex Sp Fix Accrual</label>
            </value>
            <value>
                <fullName>ZRS4</fullName>
                <isActive>false</isActive>
                <label>Ex Sp Fix Rebate</label>
            </value>
            <value>
                <fullName>ZRA5</fullName>
                <isActive>false</isActive>
                <label>Ex Sp Per Ton Accrual</label>
            </value>
            <value>
                <fullName>ZRS5</fullName>
                <isActive>false</isActive>
                <label>Ex Sp Per Ton Rebate</label>
            </value>
            <value>
                <fullName>ZCA2</fullName>
                <isActive>false</isActive>
                <label>Fix Comm Accrual</label>
            </value>
            <value>
                <fullName>ZCS2</fullName>
                <isActive>false</isActive>
                <label>Fix Comm Rebate</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>