force-app/main/default/objects/PMC_SS_IncentiveEarned__c/fields/PMC_SS_Customer__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Sold-To / Customer SAP Number</description>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Incentives Earned</relationshipLabel>
    <relationshipName>PMC_SS_IncentivesEarnedAccount</relationshipName>
    <type>Lookup</type>
</CustomField>