force-app/main/default/objects/PMC_SS_IncentiveEarned__c/fields/PMC_SS_Product__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SAP Material Code</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Incentives Earned</relationshipLabel>
    <relationshipName>PMC_SS_IncentivesEarnedProduct</relationshipName>
    <type>Lookup</type>
</CustomField>