force-app/main/default/objects/PMC_SS_IncentiveEarned__c/fields/PMC_SS_SalesAgreement__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_SalesAgreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If a Condition Contract is created via an SFDC Interface,  the number of the source document eg.SFDC Sales Agreement</description>
    <label>Sales Agreement</label>
    <referenceTo>SalesAgreement</referenceTo>
    <relationshipLabel>Incentives Earned</relationshipLabel>
    <relationshipName>PMC_SS_IncentivesEarnedSA</relationshipName>
    <type>Lookup</type>
</CustomField>