force-app/main/default/objects/PMC_SS_IncentiveEarned__c/fields/PMC_SS_SAPConditionContractNumber__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_SAPConditionContractNumber__c</fullName>
    <description>Rebate Agreement SAP Document Number</description>
    <label>SAP Condition Contract Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>